--- a/index.html
+++ b/index.html
@@ -1,41 +1,48 @@
 <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <!--=============== REMIXICONS ===============-->
-        <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+    <!--=============== REMIXICONS ===============-->
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
 
-        <!--=============== CSS ===============-->
-        <link rel="stylesheet" href="assets/css/styles.css">
+    <!--=============== CSS ===============-->
+    <link rel="stylesheet" href="assets/css/styles.css" />
 
-        <title>Live battery percentage - Bedimcode</title>
-    </head>
-    <body>
-        <!--=============== BATTERY ===============-->
-        <section class="battery">
-            <div class="battery__card">
-                <div class="battery__data">
-                    <p class="battery__text">Battery</p>
-                    <h1 class="battery__percentage">
-                        20%
-                    </h1>
+    <title>Live battery percentage</title>
+  </head>
+  <body>
+    <!--=============== BATTERY ===============-->
+    <section class="battery">
+      <div class="battery__card">
+        <div class="battery__data">
+          <p class="battery__text">Battery</p>
+          <h1 class="battery__percentage">20%</h1>
 
-                    <p class="battery__status">
-                        Low battery <i class="ri-plug-line"></i>
-                    </p>
-                </div>
+          <p class="battery__status">
+            Low battery <i class="ri-plug-line"></i>
+          </p>
+        </div>
 
-                <div class="battery__pill">
-                    <div class="battery__level">
-                        <div class="battery__liquid"></div>
-                    </div>
-                </div>
+        <div class="battery__pill">
+          <div class="battery__level">
+            <div class="battery__liquid">
             </div>
-        </section>
-        
-        <!--=============== MAIN JS ===============-->
-        <script src="assets/js/main.js"></script>
-    </body>
+            <i class="ri-flashlight-line icon-charging"></i>
+          </div>
+        </div>
+      </div>
+      <div class="battery__error">
+        <i class="ri-error-warning-line"></i>
+        Your browser does not support the battery API !!!
+      </div>
+    </section>
+
+    <!--=============== MAIN JS ===============-->
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
