--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
       </div>
       <div class="battery__error">
         <i class="ri-error-warning-line"></i>
-        <p class="battery__error-text">
-          Your browser does not support the battery API. <br />
+        <div class="battery__error-text">
+          <p>Your browser does not support the battery API.</p>
           <a href="https://caniuse.com/battery-status" target="_blank">
-            Check browser support here
+            Check browser support here !!!
           </a>
-        </p>
+        </div>
       </div>
     </section>
 
