update title page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="assets/css/styles.css" />
 
-    <title>Live battery percentage</title>
+    <title>Live Battery Percentage</title>
   </head>
   <body>
     <!--=============== BATTERY ===============-->
