add button change theme and transition color

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <section class="battery">
       <div class="battery__card">
         <div class="battery__data">
+          <i class="ri-sun-line icon-theme"></i>
           <p class="battery__text">Battery</p>
           <h1 class="battery__percentage">20%</h1>
 
