--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
             <i class="ri-flashlight-line icon-charging"></i>
           </div>
         </div>
+
+        <div class="author">
+          <p>
+            Made with <i class="ri-heart-fill"></i> by
+            <a href="https://github.com/minh0812" target="_blank">Duy Minh</a>
+          </p>
+        </div>
       </div>
       <div class="battery__error">
         <i class="ri-error-warning-line"></i>
